# 260617-kmong-macro-input-recorder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: windows-exe.yml
packaging/: macro_input_recorder.spec  p2c_pos_macro.spec
scripts/: capture_p2c_preview.py  run_app.py  run_p2c_app.py
src/macro_input_recorder/: __init__.py  app.py  automation.py  capture.py  daily_schedule.py  p2c_app.py  paths.py  recorder.py  window_focus.py  workflow.py
src/macro_input_recorder/builtin_workflows/: index.json  가승인.json  개점.json  마감.json
src/macro_input_recorder/builtin_workflows/가승인/: workflow.json
src/macro_input_recorder/builtin_workflows/개점/: workflow.json
src/macro_input_recorder/builtin_workflows/마감/: workflow.json
tests/: test_paths.py  test_recorder.py  test_workflow_import.py
