[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-input-recorder"
version = "0.1.0"
description = "Visible local input recorder for macro preparation with screenshot and JSON output."
requires-python = ">=3.10"
dependencies = [
  "pynput>=1.7.7",
  "mss>=9.0.1",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
macro-input-recorder = "macro_input_recorder.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
