[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-input-recorder"
version = "0.1.0"
description = "P2C POS macro recorder and replay automation for Windows."
requires-python = ">=3.10"
dependencies = [
  "pynput>=1.7.7",
  "mss>=9.0.1",
  "pillow>=10.0",
  "pyautogui>=0.9.54",
  "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
macro-input-recorder = "macro_input_recorder.app:main"
p2c-pos-macro = "macro_input_recorder.p2c_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
